initial version of addTask method
